# IIT_assignment

./: .gitignore  Dockerfile  README.md  attach.sh
assignment/scripts/: run.sh
assignment/src/eigen_checks/: CMakeLists.txt
assignment/src/offboard_control/: CMakeLists.txt  package.xml
assignment/src/offboard_control/include/offboard_control/: offboard_control.h  pos_control.h  trajectory_generator.h
assignment/src/offboard_control/launch/: launch.launch
assignment/src/offboard_control/src/: offboard_control.cpp  offboard_node copy.cpp  offboard_node.cpp  pos_control.cpp  trajectory_generator.cpp
assignment/src/results/: log.txt
assignment/src/trajectory_planner/: CMakeLists.txt
assignment/src/trajectory_planner/config/: waypoints.yaml
assignment/src/trajectory_planner/launch/: trajectory.launch
assignment/src/trajectory_planner/src/: trajectory_generator.cpp  trajectory_sampler.cpp
